[gd_scene load_steps=3 format=3 uid="uid://c0knmp8p2f8aj"]

[ext_resource type="Script" path="res://option.gd" id="1_aqpvp"]

[sub_resource type="LabelSettings" id="LabelSettings_3hl6l"]
font_size = 100

[node name="option" type="Node2D"]
script = ExtResource("1_aqpvp")

[node name="background" type="ColorRect" parent="."]
offset_right = 1168.0
offset_bottom = 672.0
color = Color(0, 0, 0, 1)

[node name="title" type="Label" parent="."]
offset_left = 464.0
offset_top = 152.0
offset_right = 686.0
offset_bottom = 289.0
text = "PING"
label_settings = SubResource("LabelSettings_3hl6l")

[node name="btnQuit" type="Button" parent="."]
offset_left = 552.0
offset_top = 512.0
offset_right = 594.0
offset_bottom = 543.0
text = "Quit"

[node name="btnPlay" type="Button" parent="."]
offset_left = 512.0
offset_top = 384.0
offset_right = 640.0
offset_bottom = 448.0
text = "Play"

[node name="ModMenu" type="OptionButton" parent="."]
offset_left = 776.0
offset_top = 400.0
offset_right = 952.0
offset_bottom = 432.0
item_count = 3
selected = 0
popup/item_0/text = "Timer and Goal"
popup/item_0/id = 0
popup/item_1/text = "Timer"
popup/item_1/id = 1
popup/item_2/text = "Goal"
popup/item_2/id = 2

[node name="finishMod" type="Label" parent="."]
offset_left = 816.0
offset_top = 360.0
offset_right = 856.0
offset_bottom = 383.0
text = "Finish mod"

[node name="goal" type="Label" parent="." groups=["goalControl"]]
offset_left = 160.0
offset_top = 368.0
offset_right = 200.0
offset_bottom = 391.0
text = "Goal:"

[node name="Ngoal" type="Label" parent="." groups=["goalControl"]]
offset_left = 168.0
offset_top = 400.0
offset_right = 208.0
offset_bottom = 423.0
text = "10"

[node name="goal+" type="Button" parent="." groups=["goalControl"]]
offset_left = 200.0
offset_top = 400.0
offset_right = 232.0
offset_bottom = 431.0
text = "+"

[node name="goal-" type="Button" parent="." groups=["goalControl"]]
offset_left = 128.0
offset_top = 400.0
offset_right = 160.0
offset_bottom = 432.0
text = "-"

[node name="goalR" type="Button" parent="." groups=["goalControl"]]
offset_left = 152.0
offset_top = 440.0
offset_right = 208.0
offset_bottom = 472.0
text = "Reset"

[node name="Timer" type="Label" parent="." groups=["timerControl"]]
offset_left = 336.0
offset_top = 368.0
offset_right = 386.0
offset_bottom = 391.0
text = "Timer:
"

[node name="intTimer" type="Label" parent="." groups=["timerControl"]]
offset_left = 320.0
offset_top = 392.0
offset_right = 392.0
offset_bottom = 424.0
text = "60
"
horizontal_alignment = 1

[node name="timer+" type="Button" parent="." groups=["timerControl"]]
offset_left = 384.0
offset_top = 392.0
offset_right = 416.0
offset_bottom = 423.0
text = "+"

[node name="timer-" type="Button" parent="." groups=["timerControl"]]
offset_left = 296.0
offset_top = 392.0
offset_right = 328.0
offset_bottom = 423.0
text = "-"

[node name="timerR" type="Button" parent="." groups=["timerControl"]]
offset_left = 328.0
offset_top = 432.0
offset_right = 384.0
offset_bottom = 464.0
text = "Reset"

[connection signal="pressed" from="btnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="pressed" from="btnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="item_selected" from="ModMenu" to="." method="_on_mod_menu_item_selected"]
[connection signal="pressed" from="goal+" to="." method="_on_goalP_pressed"]
[connection signal="pressed" from="goal-" to="." method="_on_goalM_pressed"]
[connection signal="pressed" from="goalR" to="." method="_on_goal_r_pressed"]
[connection signal="pressed" from="timer+" to="." method="_on_timerP_pressed"]
[connection signal="pressed" from="timer-" to="." method="_on_timerM_pressed"]
[connection signal="pressed" from="timerR" to="." method="_on_timer_r_pressed"]
